HTML com todas as imagens

--- a/index.html
+++ b/index.html
@@ -8,6 +8,49 @@
     <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.png">
 </head>
 <body>
-    <img src="./assets/images/logo-instagram.png" alt="Logo do instagram">
+    <main>
+        <div>
+            <img src="./assets/images/phone.png" alt="Celular mostrando páginas do instagram">
+            <img src="./assets/images/screenshot1.png" alt="">
+            <img src="./assets/images/screenshot2.png" alt="">
+            <img src="./assets/images/screenshot3.png" alt="">
+            <img src="./assets/images/screenshot4.png" alt="">
+        </div>
+        <div>
+            <img src="./assets/images/logo-instagram.png" alt="Logo do instagram">
+            <img src="./assets/images/personal-photo.jpg" alt="Foto do perfil de mauriciomd5">
+            <a href="#">Continuar como mauriciomd5</a>
+            <div>Não é mauriciomd5? <a href="#">Trocar de conta</a></div>
+        </div>
+        
+    </main>
+    <footer>
+        <nav>
+            <ul>
+                <li><a href="#">Meta</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Carreiras</a></li>
+                <li><a href="#">Ajuda</a></li>
+                <li><a href="#">API</a></li>
+                <li><a href="#">Privacidade</a></li>
+                <li><a href="#">Termos</a></li>
+                <li><a href="#">Principais contas</a></li>
+                <li><a href="#">Hashtags</a></li>
+                <li><a href="#">Localizações</a></li>
+                <li><a href="#">Instagram Lite</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li><a href="#">Dança</a></li>
+                <li><a href="#">Comida e bebida</a></li>
+                <li><a href="#">Casa e jardim</a></li>
+                <li><a href="#">Música</a></li>
+                <li><a href="#">Artes Visuais</a></li>
+            </ul>
+        </nav>
+        <p>Português (Brasil) ˅ © 2022 Instagram from Meta</p>
+    </footer>
 </body>
 </html>
