--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <section class="principal">
             <div class="phone">
                 <img class="phone__imagem" src="./assets/images/phone.png" alt="Celular mostrando páginas do instagram">
-                <img class="phone__screenshot screen1" src="./assets/images/screenshot1.png" alt="">
-                <img class="phone__screenshot screen2" src="./assets/images/screenshot2.png" alt="">
-                <img class="phone__screenshot screen3" src="./assets/images/screenshot3.png" alt="">
-                <img class="phone__screenshot screen4" src="./assets/images/screenshot4.png" alt="">
+                <img class="phone__screenshot" src="./assets/images/screenshot1.png" alt="">
+                <img class="phone__screenshot" src="./assets/images/screenshot2.png" alt="">
+                <img class="phone__screenshot" src="./assets/images/screenshot3.png" alt="">
+                <img class="phone__screenshot" src="./assets/images/screenshot4.png" alt="">
             </div>
             <div class="informacoes">
                 <img class="informacoes__logo" src="./assets/images/logo-instagram.png" alt="Logo do instagram">
@@ -61,5 +61,6 @@
         </div>
         
     </footer>
+    <script src="carrossel.js"></script>
 </body>
 </html>
